default sbgn style: fill of layout set to none

--- a/momapy/sbgn/styling/default.css
+++ b/momapy/sbgn/styling/default.css
@@ -3,6 +3,10 @@ TextLayoutElement {
     font_size: 16.0;
 }
 
+Layout {
+    fill: none;
+}
+
 CompartmentLayout {
     stroke: black;
     stroke_width: 7.0;
