layout fill: none; textlayout: font_color

--- a/momapy/sbgn/styling/default.css
+++ b/momapy/sbgn/styling/default.css
@@ -1,9 +1,12 @@
 TextLayoutElement {
     font_family: "FireSans";
     font_size: 16.0;
+    font_color: black;
 }
 
 Layout {
+    stroke: none;
+    stroke_width: 1.0;
     fill: none;
 }
 
