--- a/momapy/sbgn/styling/vanted.css
+++ b/momapy/sbgn/styling/vanted.css
@@ -14,7 +14,7 @@ CompartmentLayout {
     stroke: black;
     stroke_width: 7.0;
     fill: white;
-    rounded_corners: 15.0;
+    rounded_corners: 20.0;
 }
 
 GenericProcessLayout {
@@ -63,6 +63,7 @@ DissociationLayout {
     stroke: black;
     stroke_width: 2.0;
     fill: white;
+    sep: 4.5;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
 }
@@ -129,7 +130,7 @@ MacromoleculeLayout {
     stroke: black;
     stroke_width: 2.0;
     fill: white;
-    rounded_corners: 15.0;
+    rounded_corners: 9.0;
 }
 
 MacromoleculeMultimerLayout {
@@ -138,8 +139,8 @@ MacromoleculeMultimerLayout {
     stroke: black;
     stroke_width: 2.0;
     fill: white;
-    rounded_corners: 15.0;
-    offset: 5.0;
+    rounded_corners: 9.0;
+    offset: 10.0;
 }
 
 ComplexLayout {
@@ -162,7 +163,7 @@ ComplexMultimerLayout {
     stroke_width: 2.0;
     fill: white;
     cut_corners: 10.0;
-    offset: 5.0;
+    offset: 10.0;
 }
 
 SimpleChemicalLayout {
@@ -179,7 +180,7 @@ SimpleChemicalMultimerLayout {
     stroke: black;
     stroke_width: 2.0;
     fill: white;
-    offset: 5.0;
+    offset: 10.0;
 }
 
 NucleicAcidFeatureLayout {
@@ -188,7 +189,7 @@ NucleicAcidFeatureLayout {
     stroke: black;
     stroke_width: 2.0;
     fill: white;
-    rounded_corners: 15.0;
+    rounded_corners: 9.0;
 }
 
 NucleicAcidFeatureMultimerLayout {
@@ -197,8 +198,8 @@ NucleicAcidFeatureMultimerLayout {
     stroke: black;
     stroke_width: 2.0;
     fill: white;
-    rounded_corners: 15.0;
-    offset: 5.0;
+    rounded_corners: 9.0;
+    offset: 10.0;
 }
 
 EmptySetLayout {
