--- a/momapy/sbgn/styling/default_colorscheme.css
+++ b/momapy/sbgn/styling/default_colorscheme.css
@@ -8,6 +8,11 @@ MapLayout {
     fill: white;
 }
 
+SubmapLayout {
+    stroke: black;
+    fill: pink;
+}
+
 CompartmentLayout {
     stroke: black;
     fill: ivory;
@@ -119,6 +124,11 @@ NucleicAcidFeatureMultimerLayout {
 EmptySetLayout {
     stroke: black;
     fill: white;
+}
+
+TagLayout {
+    stroke: black;
+    fill: brown;
 }
 
 StateVariableLayout {
