--- a/momapy/sbgn/styling/vanted.css
+++ b/momapy/sbgn/styling/vanted.css
@@ -244,6 +244,17 @@ SubmapLayout {
     fill: white;
 }
 
+TagLayout {
+    width: 108;
+    height: 60;
+    stroke: black;
+    stroke_width: 2.0;
+    fill: white;
+}
+
+TagLayout > TextLayoutElement {
+    font_size: 12.0;
+}
 
 StateVariableLayout > TextLayoutElement {
     font_size: 10.0;
