color for subunits of macromolecule multimer layout

--- a/momapy/sbgn/styling/default_colorscheme.css
+++ b/momapy/sbgn/styling/default_colorscheme.css
@@ -81,6 +81,7 @@ MacromoleculeLayout {
 MacromoleculeMultimerLayout {
     stroke: black;
     fill: lightblue;
+    subunits_fill: lightblue, lightskyblue;
 }
 
 ComplexLayout {
