--- a/momapy/sbgn/styling/vanted.css
+++ b/momapy/sbgn/styling/vanted.css
@@ -250,9 +250,23 @@ TagLayout {
     stroke: black;
     stroke_width: 2.0;
     fill: white;
+    angle: 60.0;
+}
+
+TerminalLayout {
+    width: 108;
+    height: 60;
+    stroke: black;
+    stroke_width: 2.0;
+    fill: white;
+    angle: 60.0;
 }
 
 TagLayout > TextLayoutElement {
+    font_size: 12.0;
+}
+
+SubmapTerminalLayout > TextLayoutElement {
     font_size: 12.0;
 }
 
