--- a/momapy/sbgn/styling/default.css
+++ b/momapy/sbgn/styling/default.css
@@ -43,6 +43,8 @@ GenericProcessLayout {
     fill: white;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.0;
+    right_connector_stroke_width: 1.0;
 }
 
 UncertainProcessLayout {
@@ -51,6 +53,8 @@ UncertainProcessLayout {
     fill: white;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.0;
+    right_connector_stroke_width: 1.0;
 }
 
 OmittedProcessLayout {
@@ -59,6 +63,8 @@ OmittedProcessLayout {
     fill: white;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.0;
+    right_connector_stroke_width: 1.0;
 }
 
 AssociationLayout {
@@ -67,6 +73,8 @@ AssociationLayout {
     fill: black;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.0;
+    right_connector_stroke_width: 1.0;
 }
 
 DissociationLayout {
@@ -75,6 +83,8 @@ DissociationLayout {
     fill: white;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.0;
+    right_connector_stroke_width: 1.0;
 }
 
 PhenotypeLayout {
@@ -90,6 +100,8 @@ AndOperatorLayout {
     fill: white;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.0;
+    right_connector_stroke_width: 1.0;
 }
 
 OrOperatorLayout {
@@ -98,6 +110,8 @@ OrOperatorLayout {
     fill: white;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.0;
+    right_connector_stroke_width: 1.0;
 }
 
 NotOperatorLayout {
@@ -106,6 +120,8 @@ NotOperatorLayout {
     fill: white;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.0;
+    right_connector_stroke_width: 1.0;
 }
 
 EquivalenceOperatorLayout {
@@ -114,6 +130,8 @@ EquivalenceOperatorLayout {
     fill: white;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.0;
+    right_connector_stroke_width: 1.0;
 }
 
 UnspecifiedEntityLayout {
