--- a/momapy/sbgn/styling/vanted.css
+++ b/momapy/sbgn/styling/vanted.css
@@ -25,6 +25,8 @@ GenericProcessLayout {
     fill: white;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.5;
+    right_connector_stroke_width: 1.5;
 }
 
 UncertainProcessLayout {
@@ -35,6 +37,8 @@ UncertainProcessLayout {
     fill: white;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.5;
+    right_connector_stroke_width: 1.5;
 }
 
 OmittedProcessLayout {
@@ -45,6 +49,8 @@ OmittedProcessLayout {
     fill: white;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.5;
+    right_connector_stroke_width: 1.5;
 }
 
 AssociationLayout {
@@ -55,6 +61,8 @@ AssociationLayout {
     fill: black;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.5;
+    right_connector_stroke_width: 1.5;
 }
 
 DissociationLayout {
@@ -66,6 +74,8 @@ DissociationLayout {
     sep: 4.5;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.5;
+    right_connector_stroke_width: 1.5;
 }
 
 PhenotypeLayout {
@@ -85,6 +95,8 @@ AndOperatorLayout {
     fill: white;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.5;
+    right_connector_stroke_width: 1.5;
 }
 
 OrOperatorLayout {
@@ -95,6 +107,8 @@ OrOperatorLayout {
     fill: white;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.5;
+    right_connector_stroke_width: 1.5;
 }
 
 NotOperatorLayout {
@@ -105,6 +119,8 @@ NotOperatorLayout {
     fill: white;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.5;
+    right_connector_stroke_width: 1.5;
 }
 
 EquivalenceOperatorLayout {
@@ -115,6 +131,8 @@ EquivalenceOperatorLayout {
     fill: white;
     left_connector_length: 10.0;
     right_connector_length: 10.0;
+    left_connector_stroke_width: 1.5;
+    right_connector_stroke_width: 1.5;
 }
 
 UnspecifiedEntityLayout {
