--- a/momapy/sbgn/styling/default.css
+++ b/momapy/sbgn/styling/default.css
@@ -336,3 +336,134 @@ EquivalenceArcLayout {
     fill: none;
     shorten: 0.0;
 }
+
+MacromoleculeUnitOfInformationLayout {
+    stroke: black;
+    stroke_width: 1.0;
+    fill: white;
+    rounded_corners: 3.0;
+}
+
+UnspecifiedEntityUnitOfInformationLayout {
+    stroke: black;
+    stroke_width: 1.0;
+    fill: white;
+}
+
+NucleicAcidFeatureUnitOfInformationLayout {
+    stroke: black;
+    stroke_width: 1.0;
+    fill: white;
+    rounded_corners: 3.0;
+}
+
+ComplexUnitOfInformationLayout {
+    stroke: black;
+    stroke_width: 1.0;
+    fill: white;
+    cut_corners: 3.0;
+}
+
+SimpleChemicalUnitOfInformationLayout {
+    stroke: black;
+    stroke_width: 1.0;
+    fill: white;
+}
+
+PerturbationUnitOfInformationLayout {
+    stroke: black;
+    stroke_width: 1.0;
+    fill: white;
+    angle: 60.0;
+}
+
+MacromoleculeUnitOfInformationLayout > TextLayout {
+    font_size: 8;
+}
+
+UnspecifiedEntityUnitOfInformationLayout > TextLayout {
+    font_size: 8;
+}
+
+NucleicAcidFeatureUnitOfInformationLayout > TextLayout {
+    font_size: 8;
+}
+
+ComplexUnitOfInformationLayout > TextLayout {
+    font_size: 8;
+}
+
+SimpleChemicalUnitOfInformationLayout > TextLayout {
+    font_size: 8;
+}
+
+PerturbationUnitOfInformationLayout > TextLayout {
+    font_size: 8;
+}
+
+DelayOperatorLayout {
+    stroke: black;
+    stroke_width: 1.0;
+    fill: white;
+    left_connector_length: 10.0;
+    right_connector_length: 10.0;
+    left_connector_stroke_width: 1.0;
+    right_connector_stroke_width: 1.0;
+}
+
+UnknownInfluenceLayout {
+    stroke: black;
+    stroke_width: 1.0;
+    fill: none;
+    arrowhead_stroke: black;
+    arrowhead_stroke_width: 1.0;
+    arrowhead_fill: white;
+    shorten: 1.0;
+    width: 12.0;
+    height: 12.0;
+}
+
+PositiveInfluenceLayout {
+    stroke: black;
+    stroke_width: 1.0;
+    fill: none;
+    arrowhead_stroke: black;
+    arrowhead_stroke_width: 1.0;
+    arrowhead_fill: white;
+    shorten: 1.0;
+    width: 12.0;
+    height: 12.0;
+}
+
+NecessaryStimulationLayout {
+    stroke: black;
+    stroke_width: 1.0;
+    fill: none;
+    arrowhead_stroke: black;
+    arrowhead_stroke_width: 1.0;
+    arrowhead_fill: white;
+    bar_width: 1.0;
+    bar_height: 12.0;
+    sep: 2.0;
+    shorten: 1.0;
+    width: 12.0;
+    height: 12.0;
+}
+
+NegativeInfluenceLayout {
+    stroke: black;
+    stroke_width: 1.0;
+    fill: none;
+    arrowhead_stroke: black;
+    arrowhead_stroke_width: 1.0;
+    arrowhead_fill: white;
+    shorten: 2.0;
+    width: 1.5;
+    height: 12.0;
+}
+
+BiologicalActivityLayout {
+    stroke: black;
+    stroke_width: 1.0;
+    fill: white;
+}
