--- a/momapy/sbgn/styling/newt.css
+++ b/momapy/sbgn/styling/newt.css
@@ -239,10 +239,10 @@ PerturbingAgentLayout {
 }
 
 StateVariableLayout {
-    width: 18;
-    height: 18;
+    width: 12;
+    height: 12;
     stroke: black;
-    stroke_width: 2.0;
+    stroke_width: 1.0;
     fill: white;
 }
 
@@ -297,6 +297,7 @@ SubmapTerminalLayout > TextLayout {
 }
 
 StateVariableLayout > TextLayout {
+    font_family: "Arial";
     font_size: 9.0;
 }
 
