--- a/momapy/sbgn/styling/newt.css
+++ b/momapy/sbgn/styling/newt.css
@@ -8,6 +8,7 @@ MapLayout {
     stroke: none;
     stroke_width: 2.0;
     fill: white;
+    filter: none;
 }
 
 CompartmentLayout {
@@ -15,6 +16,7 @@ CompartmentLayout {
     stroke_width: 7.0;
     fill: white;
     rounded_corners: 20.0;
+    filter: none;
 }
 
 GenericProcessLayout {
@@ -27,6 +29,7 @@ GenericProcessLayout {
     right_connector_length: 3.0;
     left_connector_stroke_width: 1.25;
     right_connector_stroke_width: 1.25;
+    filter: none;
 }
 
 UncertainProcessLayout {
@@ -39,6 +42,7 @@ UncertainProcessLayout {
     right_connector_length: 10.0;
     left_connector_stroke_width: 1.5;
     right_connector_stroke_width: 1.5;
+    filter: none;
 }
 
 OmittedProcessLayout {
@@ -51,6 +55,7 @@ OmittedProcessLayout {
     right_connector_length: 10.0;
     left_connector_stroke_width: 1.5;
     right_connector_stroke_width: 1.5;
+    filter: none;
 }
 
 AssociationLayout {
@@ -63,6 +68,7 @@ AssociationLayout {
     right_connector_length: 10.0;
     left_connector_stroke_width: 1.5;
     right_connector_stroke_width: 1.5;
+    filter: none;
 }
 
 DissociationLayout {
@@ -76,6 +82,7 @@ DissociationLayout {
     right_connector_length: 10.0;
     left_connector_stroke_width: 1.5;
     right_connector_stroke_width: 1.5;
+    filter: none;
 }
 
 PhenotypeLayout {
@@ -85,6 +92,7 @@ PhenotypeLayout {
     stroke_width: 2.0;
     fill: white;
     angle: 60.0;
+    filter: none;
 }
 
 AndOperatorLayout {
@@ -97,6 +105,7 @@ AndOperatorLayout {
     right_connector_length: 10.0;
     left_connector_stroke_width: 1.5;
     right_connector_stroke_width: 1.5;
+    filter: none;
 }
 
 OrOperatorLayout {
@@ -109,6 +118,7 @@ OrOperatorLayout {
     right_connector_length: 10.0;
     left_connector_stroke_width: 1.5;
     right_connector_stroke_width: 1.5;
+    filter: none;
 }
 
 NotOperatorLayout {
@@ -121,6 +131,7 @@ NotOperatorLayout {
     right_connector_length: 10.0;
     left_connector_stroke_width: 1.5;
     right_connector_stroke_width: 1.5;
+    filter: none;
 }
 
 EquivalenceOperatorLayout {
@@ -133,6 +144,7 @@ EquivalenceOperatorLayout {
     right_connector_length: 10.0;
     left_connector_stroke_width: 1.5;
     right_connector_stroke_width: 1.5;
+    filter: none;
 }
 
 UnspecifiedEntityLayout {
@@ -141,6 +153,7 @@ UnspecifiedEntityLayout {
     stroke: black;
     stroke_width: 2.0;
     fill: white;
+    filter: none;
 }
 
 MacromoleculeLayout {
@@ -150,6 +163,7 @@ MacromoleculeLayout {
     stroke_width: 1.25;
     fill: white;
     rounded_corners: 9.0;
+    filter: none;
 }
 
 MacromoleculeMultimerLayout {
@@ -160,6 +174,7 @@ MacromoleculeMultimerLayout {
     fill: white;
     rounded_corners: 9.0;
     offset: 10.0;
+    filter: none;
 }
 
 ComplexLayout {
@@ -169,6 +184,7 @@ ComplexLayout {
     stroke_width: 2.0;
     fill: white;
     cut_corners: 10.0;
+    filter: none;
 }
 
 ComplexLayout > TextLayout {
@@ -183,6 +199,7 @@ ComplexMultimerLayout {
     fill: white;
     cut_corners: 10.0;
     offset: 10.0;
+    filter: none;
 }
 
 SimpleChemicalLayout {
@@ -191,6 +208,7 @@ SimpleChemicalLayout {
     stroke: black;
     stroke_width: 2.0;
     fill: white;
+    filter: none;
 }
 
 SimpleChemicalMultimerLayout {
@@ -200,6 +218,7 @@ SimpleChemicalMultimerLayout {
     stroke_width: 2.0;
     fill: white;
     offset: 10.0;
+    filter: none;
 }
 
 NucleicAcidFeatureLayout {
@@ -209,6 +228,7 @@ NucleicAcidFeatureLayout {
     stroke_width: 2.0;
     fill: white;
     rounded_corners: 9.0;
+    filter: none;
 }
 
 NucleicAcidFeatureMultimerLayout {
@@ -219,6 +239,7 @@ NucleicAcidFeatureMultimerLayout {
     fill: white;
     rounded_corners: 9.0;
     offset: 10.0;
+    filter: none;
 }
 
 EmptySetLayout {
@@ -227,6 +248,7 @@ EmptySetLayout {
     stroke: black;
     stroke_width: 2.0;
     fill: white;
+    filter: none;
 }
 
 PerturbingAgentLayout {
@@ -236,6 +258,7 @@ PerturbingAgentLayout {
     stroke_width: 2.0;
     fill: white;
     angle: 60.0;
+    filter: none;
 }
 
 StateVariableLayout {
@@ -244,6 +267,7 @@ StateVariableLayout {
     stroke: black;
     stroke_width: 1.0;
     fill: white;
+    filter: none;
 }
 
 UnitOfInformationLayout {
@@ -252,6 +276,7 @@ UnitOfInformationLayout {
     stroke: black;
     stroke_width: 2.0;
     fill: white;
+    filter: none;
 }
 
 CardinalityLayout {
@@ -260,6 +285,7 @@ CardinalityLayout {
     stroke: black;
     stroke_width: 1.5;
     fill: white;
+    filter: none;
 }
 
 SubmapLayout {
@@ -268,6 +294,7 @@ SubmapLayout {
     stroke: black;
     stroke_width: 2.0;
     fill: white;
+    filter: none;
 }
 
 TagLayout {
@@ -277,6 +304,7 @@ TagLayout {
     stroke_width: 2.0;
     fill: white;
     angle: 60.0;
+    filter: none;
 }
 
 TerminalLayout {
@@ -286,6 +314,7 @@ TerminalLayout {
     stroke_width: 2.0;
     fill: white;
     angle: 60.0;
+    filter: none;
 }
 
 TagLayout > TextLayout {
@@ -314,6 +343,7 @@ ConsumptionLayout {
     stroke_width: 1.5;
     fill: none;
     shorten: 0.0;
+    filter: none;
 }
 
 ProductionLayout {
@@ -326,6 +356,7 @@ ProductionLayout {
     shorten: 1.0;
     width: 15.0;
     height: 15.0;
+    filter: none;
 }
 
 ModulationLayout {
@@ -338,6 +369,7 @@ ModulationLayout {
     shorten: 1.0;
     width: 15.0;
     height: 15.0;
+    filter: none;
 }
 
 StimulationLayout {
@@ -350,6 +382,7 @@ StimulationLayout {
     shorten: 1.0;
     width: 15.0;
     height: 15.0;
+    filter: none;
 }
 
 CatalysisLayout {
@@ -362,6 +395,7 @@ CatalysisLayout {
     shorten: 4.0;
     width: 13.0;
     height: 13.0;
+    filter: none;
 }
 
 NecessaryStimulationLayout {
@@ -377,6 +411,7 @@ NecessaryStimulationLayout {
     shorten: 1.0;
     width: 15.0;
     height: 15.0;
+    filter: none;
 }
 
 InhibitionLayout {
@@ -389,6 +424,7 @@ InhibitionLayout {
     shorten: 6.0;
     width: 1.5;
     height: 15.0;
+    filter: none;
 }
 
 LogicArcLayout {
@@ -396,6 +432,7 @@ LogicArcLayout {
     stroke_width: 2.0;
     fill: none;
     shorten: 0.0;
+    filter: none;
 }
 
 EquivalenceArcLayout {
@@ -403,6 +440,7 @@ EquivalenceArcLayout {
     stroke_width: 2.0;
     fill: none;
     shorten: 0.0;
+    filter: none;
 }
 
 MacromoleculeUnitOfInformationLayout {
@@ -410,12 +448,14 @@ MacromoleculeUnitOfInformationLayout {
     stroke_width: 2.0;
     fill: white;
     rounded_corners: 3.0;
+    filter: none;
 }
 
 UnspecifiedEntityUnitOfInformationLayout {
     stroke: black;
     stroke_width: 2.0;
     fill: white;
+    filter: none;
 }
 
 NucleicAcidFeatureUnitOfInformationLayout {
@@ -423,6 +463,7 @@ NucleicAcidFeatureUnitOfInformationLayout {
     stroke_width: 2.0;
     fill: white;
     rounded_corners: 3.0;
+    filter: none;
 }
 
 ComplexUnitOfInformationLayout {
@@ -430,12 +471,14 @@ ComplexUnitOfInformationLayout {
     stroke_width: 2.0;
     fill: white;
     cut_corners: 3.0;
+    filter: none;
 }
 
 SimpleChemicalUnitOfInformationLayout {
     stroke: black;
     stroke_width: 2.0;
     fill: white;
+    filter: none;
 }
 
 PerturbationUnitOfInformationLayout {
@@ -443,6 +486,7 @@ PerturbationUnitOfInformationLayout {
     stroke_width: 2.0;
     fill: white;
     angle: 60.0;
+    filter: none;
 }
 
 MacromoleculeUnitOfInformationLayout > TextLayout {
@@ -479,6 +523,7 @@ DelayOperatorLayout {
     right_connector_length: 10.0;
     left_connector_stroke_width: 1.5;
     right_connector_stroke_width: 1.5;
+    filter: none;
 }
 
 UnknownInfluenceLayout {
@@ -491,6 +536,7 @@ UnknownInfluenceLayout {
     shorten: 1.0;
     width: 15.0;
     height: 15.0;
+    filter: none;
 }
 
 PositiveInfluenceLayout {
@@ -503,6 +549,7 @@ PositiveInfluenceLayout {
     shorten: 1.0;
     width: 15.0;
     height: 15.0;
+    filter: none;
 }
 
 NegativeInfluenceLayout {
@@ -515,6 +562,7 @@ NegativeInfluenceLayout {
     shorten: 6.0;
     width: 1.5;
     height: 15.0;
+    filter: none;
 }
 
 BiologicalActivityLayout {
@@ -523,4 +571,5 @@ BiologicalActivityLayout {
     stroke: black;
     stroke_width: 2.0;
     fill: white;
+    filter: none;
 }
