made style for logic arc

--- a/momapy/sbgn/styling/default_colorscheme.css
+++ b/momapy/sbgn/styling/default_colorscheme.css
@@ -172,6 +172,11 @@ NucleicAcidFeatureLayout > UnitOfInformationLayout {
     fill: mediumseagreen;
 }
 
+LogicArcLayout {
+    stroke: black;
+    fill: none;
+}
+
 ConsumptionLayout {
     stroke: black;
     fill: none;
